# experiments-kafka

./: .gitignore  Kafka_Performance_Resilience_Experiment_Plan.md  README.md  clean.sh  docker-compose.yml  e2e.py  network_interfaces.md  plot_producer_latency.py  profile-codebase.py  profile.py  prom-snapshot.sh  prometheus.yml  pyproject.toml  start_consumers.sh  start_producers.sh  stop_consumers.sh  stop_producers.sh
diss/: high-volume-ingest.md  low-latency-pipeline.md
experiments/high_volume_ingest/: dates.txt  experiment_plan.md  producer_tuning_guidance.md
experiments/high_volume_ingest/baseline/: broker1.properties  broker2.properties  producer.properties  producer1-perf.csv  producer2-perf.csv  producer3-perf.csv
experiments/high_volume_ingest/p0/: producer2-perf.csv  producer3-perf.csv
experiments/high_volume_ingest/p1/: broker1.properties  broker2.properties  producer-bk.properties
experiments/high_volume_ingest/p2/: broker2.properties  broker3.properties  producer.properties  producer1-perf.csv  producer2-perf.csv  producer3-perf.csv
experiments/high_volume_ingest/p3/: producer.properties  producer1-perf.csv  producer2-perf.csv  producer3-perf.csv
experiments/high_volume_ingest/p4/: broker1.properties  (+4 more)
experiments/high_volume_ingest_old/: experiment_plan.md  plan.md
experiments/high_volume_ingest_redone/: dates.txt
experiments/low_latency_pipeline/: dates.txt  expiring-messages-phenomena.txt  low_latency_experiment_matrix.md  replica-parameter-definitions.txt
experiments/sustained_high_volume_ingestion/: broker_tuning_guidance.md
(+94 files in other folders)
