[project]
name = "experiments-kafka"
version = "0.1.0"
description = ""
authors = [
    {name = "Stefan - Alexandru Pitur",email = "stefan.pitur24@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geni-lib (>=0.9.9.4,<0.10.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "ruff (>=0.12.1,<0.13.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

